--- a/index.html
+++ b/index.html
@@ -87,11 +87,19 @@
             region of New Zealand.</p>
             <a href="ENVS3100PolishedViz4.html" class="project-link">View Project →</a>
         </div>
-
+        <div class="project-card">
+            <h2>Colorado Pollinator Network</h2>
+            <p>Created using D3 package in R. Paired an interative force network diagram
+            with data on Colorado's pollinators and their host plants to demonstrate
+            connectivity. Then I created four charts to convey some more nuance relative
+            to pollinator conservation.</p>
+            <a href="ENVS3100PolishedViz4.html" class="project-link">View Project →</a>
+        </div>
     </main>
 
     <footer>
         <p>Built with R and HTML | <a href="bchelfdata@gmail.com">Contact Me</a></p>
     </footer>
 </body>
+
 </html>
