--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             with data on Colorado's pollinators and their host plants to demonstrate
             connectivity. Then I created four charts to convey some more nuance relative
             to pollinator conservation.</p>
-            <a href="ENVS3100PolishedViz4.html" class="project-link">View Project →</a>
+            <a href="ENVS3100FinalViz.html" class="project-link">View Project →</a>
         </div>
     </main>
 
@@ -103,3 +103,4 @@
 </body>
 
 </html>
+
