--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
             to pollinator conservation.</p>
             <a href="ENVS3100FinalViz.html" class="project-link">View Project →</a>
         </div>
+         <div class="project-card">
+            <h2>CU Pollinator Garden Plan (PDF)</h2>
+            <p>A planting design for a derelict lot on the campus of the University of Colorado.</p>
+            <a href="pdfs/CUPollinatorGarden.pdf" class="project-link">View PDF →</a>
+        </div>
+
+        <div class="project-card">
+            <h2>CASE Center Mountainside Plan (PDF)</h2>
+            <p>This project turns the hillside of CU's Center for Academic Success and Engagement 
+            into a simulacrum of the scenic hikes that surround it in Boulder.</p>
+            <a href="pdfs/LAND3103Plan3.pdf" class="project-link">View PDF →</a>
+        </div>
+    </main>
     </main>
 
     <footer>
@@ -103,4 +116,5 @@
 </body>
 
 </html>
+
 
