--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
     </main>
 
     <footer>
-        <p>Built with R and HTML | <a href="bchelfdata@gmail.com">Contact Me</a></p>
+        <p>Built with R and HTML | <a href="mailto:bchelfdata@gmail.com">Contact Me</a></p>
     </footer>
 </body>
 
 </html>
+
 
 
