--- a/index.html
+++ b/index.html
@@ -96,11 +96,15 @@
             <a href="ENVS3100FinalViz.html" class="project-link">View Project →</a>
         </div>
          <div class="project-card">
+            <h2> Aspen Transportation Map (PDF)</h2>
+            <p>A map of different transportation routes created using Piktin County data and ArcGIS Pro.</p>
+            <a href="pdfs/GISAspenTransportation.pdf" class="project-link">View PDF →</a>
+        </div>
+         <div class="project-card">
             <h2>CU Pollinator Garden Plan (PDF)</h2>
             <p>A planting design for a derelict lot on the campus of the University of Colorado.</p>
             <a href="pdfs/CUPollinatorGarden.pdf" class="project-link">View PDF →</a>
         </div>
-
         <div class="project-card">
             <h2>CASE Center Mountainside Plan (PDF)</h2>
             <p>This project turns the hillside of CU's Center for Academic Success and Engagement 
@@ -116,6 +120,7 @@
 </body>
 
 </html>
+
 
 
 
