--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
          <div class="project-card">
             <h2> Aspen Transportation Map (PDF)</h2>
             <p>A map of different transportation routes created using Piktin County data and ArcGIS Pro.</p>
-            <a href="pdfs/GISAspenTransportation.pdf" class="project-link">View PDF →</a>
+            <a href="pdfs/GISAspenTransport.pdf" class="project-link">View PDF →</a>
         </div>
          <div class="project-card">
             <h2>CU Pollinator Garden Plan (PDF)</h2>
@@ -120,6 +120,7 @@
 </body>
 
 </html>
+
 
 
 
